Thu Sep  5 14:54:33 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am server.c: Move libmemintercept.so into
	/usr/lib/memprof.

	* Makefile.am main.c server.[ch]: Add options for 
	turning on and controlling speed profiling, install
	'speedprof' as a symlink, change behavior when
	run as speedprof.
	
	* memprof.glade main.c: Hide the leak detection
	UI when in 'speedprof' mode.

	* memintercept.c intercept.[ch]: Move the intercept-library
	stuff that is shared between memory and speed profiling
	into intercept.[ch].

	* speedintercept.c: Intercept library for speed profiling.

	* memprof.h process.c: Add a MI_TIME operation.

	* mi-perfctr.[ch] perfctr.h: Speed profiling via the
	PIII performance monitoring counters and the perfctr
	driver.

	* memprof.spec: Update.

Sat Aug 31 22:24:22 2002  Kristian Rietveld  <kris@gtk.org>

	* Release 0.5.1

Wed Aug 21 19:26:24 2002  Kristian Rietveld  <kris@gtk.org>

	* memprof.glade: simple typo fix

Tue Aug 19 02:28:34 2002  Kristian Rietveld  <kris@gtk.org>

	* main.c (run_cb), (skip_add_cb), (skip_regexes_add_cb): conversion
	to GtkDialog.

	* memprof.glade (fileentry1): GnomeFileEntry in the run dialog should
	be modal, so the file selector there also responds (pointed out
	by Dennis Smit),
	(SkipAddDialog, RunDialog, SkipRegexesAddDialog): conversion to
	GtkDialog and enable has_default again on the appropriate buttons,
	set activates_default to true on the entries,
	(Preferences dialog): use stock buttons for add and delete.

	* process.c (process_find_exec): prepend "./" to non-absolute paths,
	so running programs in the current directory works without hassle,
	(process_run): also pass path to program to mp_server_instrument.

	* server.[ch] (mp_server_instrument): use program value processed by
	process_find_exec and not args[0].

Tue Aug 20 11:03:11 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Patch from Art Haas to use AC_CONFIG_FILES.

Mon Aug 19 14:25:39 2002  Owen Taylor  <otaylor@redhat.com>
